Add page of description of book

--- a/Presentation/Store.Web/Views/Home/Index.cshtml
+++ b/Presentation/Store.Web/Views/Home/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Web Store book";
 }
 
-<form action="/search" method="get">
-    <input type="text" name="query" value="search"/>
-    <button type="submit">Search</button>
-</form>
+
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
