--- a/Presentation/Store.Web/Views/Book/Index.cshtml
+++ b/Presentation/Store.Web/Views/Book/Index.cshtml
@@ -8,3 +8,7 @@
 <p><strong>@Model.Author</strong></p>
 <p>@Model.Desscription</p>
 <p><strong>price: </strong>@Model.Price</p>
+<form action="@Url.Action("Add", "Cart")" method="post">
+    <input type="hidden" name="id" value="@Model.Id"/>
+    <button class="btn btn-outline-success m-lg-2" type="submit">Add to Cart</button>
+</form>
