--- a/Presentation/Store.Web/Views/Book/Index.cshtml
+++ b/Presentation/Store.Web/Views/Book/Index.cshtml
@@ -9,6 +9,7 @@
 <p>@Model.Desscription</p>
 <p><strong>price: </strong>@Model.Price</p>
 <form action="@Url.Action("AddItem", "Order")" method="post">
-    <input type="hidden" name="id" value="@Model.Id"/>
+    <input type="hidden" name="bookId" value="@Model.Id" />
+    <input type="text" name="count" value="1" />
     <button class="btn btn-outline-success m-lg-2" type="submit">Add to Cart</button>
 </form>
