--- a/Presentation/Store.Web/Views/Order/Index.cshtml
+++ b/Presentation/Store.Web/Views/Order/Index.cshtml
@@ -14,6 +14,7 @@
             <th scope="col">Price of Unit</th>
             <th scope="col">Count</th>
             <th scope="col">Total Price</th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
@@ -26,6 +27,12 @@
             <td class="text-center">@Model.Items[i].Price</td>
             <td class="text-center">@Model.Items[i].Count</td>
             <td class="text-right">@(Model.Items[i].Price * @Model.Items[i].Count)</td>
+            <td class="text-center">
+                <form action="@Url.Action("RemoveItem", "Order")" method="post" class="form-inline">
+                    <input type="hidden" value="@Model.Items[i].BookId" name="bookId"/>
+                    <button class="btn btn-danger" type="submit">Remove</button>
+                </form>
+            </td>
         </tr>
         }
     <tr>
