--- a/Presentation/Store.Web/Views/Order/Index.cshtml
+++ b/Presentation/Store.Web/Views/Order/Index.cshtml
@@ -46,3 +46,16 @@
 </tbody>
     
 </table>
+
+<form action="@Url.Action("SendConfirmationCode")" method="post">
+    <input type="hidden" name="orderId" value="@Model.Id" />
+    <div class="form-control">
+        <label for="cellPhone">Pnone Number</label>
+        <input type="text" name="cellPhone" value="+380123456789" />
+        @if (Model.Errors.ContainsKey("cellPhone"))
+        {
+            <small class="form-text text-danger">@Model.Errors["cellPhone"]</small>
+        }
+    </div>
+    <button type="submit" class="tbn btn-success">Send Code</button>
+</form>
