Add payment by bank card

--- a/Presentation/Store.Web/Views/Order/Finish.cshtml
+++ b/Presentation/Store.Web/Views/Order/Finish.cshtml
@@ -8,4 +8,4 @@
 <p>
     Order is processed. We are package it and send to delivery service.
 </p>
-<a href="@Url.Action("HomeController.Index")">Return to Store</a>
+<a href="@Url.Action("Index", "Home")">Return to Store</a>
